# Solana-Developer-Bootcamp-2024

./: .gitignore
project-01-favorites/: Anchor.toml  package.json
project-01-favorites/programs/project-01-favorites/: Cargo.toml
project-01-favorites/programs/project-01-favorites/src/: lib.rs
project-01-favorites/tests/: project-01-favorites.ts
